crates/fig-parser/tests/snapshots/integration_tests__expressions__arithmetic.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: arithmetic_ops
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params:
          - name: a
            ty: I32
          - name: b
            ty: I32
        return_types:
          - Path:
              path:
                segments:
                  - ok
              generic_args: []
      body:
        statements:
          - Let:
              annotations: []
              name: add
              ty: ~
              value:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - a
                  op: Add
                  rhs:
                    Path:
                      segments:
                        - b
          - Let:
              annotations: []
              name: sub
              ty: ~
              value:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - a
                  op: Subtract
                  rhs:
                    Path:
                      segments:
                        - b
          - Let:
              annotations: []
              name: mul
              ty: ~
              value:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - a
                  op: Multiply
                  rhs:
                    Path:
                      segments:
                        - b
          - Let:
              annotations: []
              name: div
              ty: ~
              value:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - a
                  op: Divide
                  rhs:
                    Path:
                      segments:
                        - b
          - Let:
              annotations: []
              name: mod_
              ty: ~
              value:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - a
                  op: Modulo
                  rhs:
                    Path:
                      segments:
                        - b
          - Pass
