crates/fig-parser/tests/snapshots/integration_tests__expressions__as_cast.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: cast_ops
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params:
          - name: x
            ty: I32
        return_types:
          - Path:
              path:
                segments:
                  - ok
              generic_args: []
      body:
        statements:
          - Let:
              annotations: []
              name: as_u8
              ty: ~
              value:
                Cast:
                  expr:
                    Path:
                      segments:
                        - x
                  target_type: U8
          - Let:
              annotations: []
              name: as_f64
              ty: ~
              value:
                Cast:
                  expr:
                    Path:
                      segments:
                        - x
                  target_type: F64
          - Let:
              annotations: []
              name: as_usize
              ty: ~
              value:
                Cast:
                  expr:
                    Path:
                      segments:
                        - x
                  target_type: USize
          - Let:
              annotations: []
              name: chain
              ty: ~
              value:
                Cast:
                  expr:
                    Cast:
                      expr:
                        Path:
                          segments:
                            - x
                      target_type: I64
                  target_type: F64
          - Pass
