crates/fig-parser/tests/snapshots/integration_tests__expressions__bitwise.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: bitwise_ops
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params:
          - name: a
            ty: U32
          - name: b
            ty: U32
        return_types:
          - Path:
              path:
                segments:
                  - ok
              generic_args: []
      body:
        statements:
          - Let:
              annotations: []
              name: band
              ty: ~
              value:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - a
                  op: BitwiseAnd
                  rhs:
                    Path:
                      segments:
                        - b
          - Let:
              annotations: []
              name: bor
              ty: ~
              value:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - a
                  op: BitwiseOr
                  rhs:
                    Path:
                      segments:
                        - b
          - Let:
              annotations: []
              name: bxor
              ty: ~
              value:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - a
                  op: BitwiseXor
                  rhs:
                    Path:
                      segments:
                        - b
          - Let:
              annotations: []
              name: shl
              ty: ~
              value:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - a
                  op: ShiftLeft
                  rhs:
                    IntegerLiteral:
                      base: Decimal
                      digits: "2"
                      suffix: ~
          - Let:
              annotations: []
              name: shr
              ty: ~
              value:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - a
                  op: ShiftRight
                  rhs:
                    IntegerLiteral:
                      base: Decimal
                      digits: "2"
                      suffix: ~
          - Pass
