crates/fig-parser/tests/snapshots/integration_tests__expressions__chained_postfix.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: complex_postfix
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params:
          - name: v
            ty:
              Pointer:
                nullable: false
                mutable: true
                element_type:
                  Path:
                    path:
                      segments:
                        - Vec
                    generic_args:
                      - I32
        return_types:
          - Path:
              path:
                segments:
                  - ok
              generic_args: []
      body:
        statements:
          - Let:
              annotations: []
              name: len
              ty: ~
              value:
                Call:
                  callee:
                    FieldAccess:
                      object:
                        Path:
                          segments:
                            - v
                      field: len
                      is_propagating: false
                  args: []
                  generic_args: ~
                  is_propagating: false
          - Let:
              annotations: []
              name: item
              ty: ~
              value:
                Call:
                  callee:
                    FieldAccess:
                      object:
                        Path:
                          segments:
                            - v
                      field: get
                      is_propagating: false
                  args:
                    - name: ~
                      value:
                        IntegerLiteral:
                          base: Decimal
                          digits: "0"
                          suffix: ~
                  generic_args: ~
                  is_propagating: false
          - Expression:
              Call:
                callee:
                  FieldAccess:
                    object:
                      Path:
                        segments:
                          - v
                    field: push
                    is_propagating: false
                args:
                  - name: ~
                    value:
                      IntegerLiteral:
                        base: Decimal
                        digits: "42"
                        suffix: ~
                generic_args: ~
                is_propagating: false
          - Pass
