crates/fig-parser/tests/snapshots/integration_tests__expressions__comparisons.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: comparison_ops
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params:
          - name: a
            ty: I32
          - name: b
            ty: I32
        return_types:
          - Path:
              path:
                segments:
                  - ok
              generic_args: []
      body:
        statements:
          - Let:
              annotations: []
              name: lt
              ty: ~
              value:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - a
                  op: LessThan
                  rhs:
                    Path:
                      segments:
                        - b
          - Let:
              annotations: []
              name: gt
              ty: ~
              value:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - a
                  op: GreaterThan
                  rhs:
                    Path:
                      segments:
                        - b
          - Let:
              annotations: []
              name: le
              ty: ~
              value:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - a
                  op: LessThanOrEqual
                  rhs:
                    Path:
                      segments:
                        - b
          - Let:
              annotations: []
              name: ge
              ty: ~
              value:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - a
                  op: GreaterThanOrEqual
                  rhs:
                    Path:
                      segments:
                        - b
          - Let:
              annotations: []
              name: eq
              ty: ~
              value:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - a
                  op: Equal
                  rhs:
                    Path:
                      segments:
                        - b
          - Let:
              annotations: []
              name: ne
              ty: ~
              value:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - a
                  op: NotEqual
                  rhs:
                    Path:
                      segments:
                        - b
          - Pass
