crates/fig-parser/tests/snapshots/integration_tests__expressions__effect_call_suffix.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: effect_calls
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params:
          - name: v
            ty:
              Pointer:
                nullable: false
                mutable: true
                element_type:
                  Path:
                    path:
                      segments:
                        - Vec
                    generic_args:
                      - I32
        return_types:
          - Path:
              path:
                segments:
                  - ok
              generic_args: []
      body:
        statements:
          - Expression:
              Call:
                callee:
                  FieldAccess:
                    object:
                      Path:
                        segments:
                          - v
                    field: push
                    is_propagating: false
                args:
                  - name: ~
                    value:
                      IntegerLiteral:
                        base: Decimal
                        digits: "42"
                        suffix: ~
                generic_args: ~
                is_propagating: true
          - Expression:
              Call:
                callee:
                  FieldAccess:
                    object:
                      Path:
                        segments:
                          - v
                    field: pop
                    is_propagating: false
                args: []
                generic_args: ~
                is_propagating: true
          - Expression:
              Call:
                callee:
                  FieldAccess:
                    object:
                      Path:
                        segments:
                          - v
                    field: clear
                    is_propagating: false
                args: []
                generic_args: ~
                is_propagating: true
          - Pass
