crates/fig-parser/tests/snapshots/integration_tests__expressions__field_access_chained.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name:
        segments:
          - Inner
      generic_params: []
      requires: []
      fields:
        - name: value
          ty: I32
          visibility: Default
          annotations: []
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name:
        segments:
          - Outer
      generic_params: []
      requires: []
      fields:
        - name: inner
          ty:
            Path:
              path:
                segments:
                  - Inner
              generic_args: []
          visibility: Default
          annotations: []
        - name: label
          ty:
            Array:
              element_type: U8
              size: ~
          visibility: Default
          annotations: []
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: deep_field
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params:
          - name: o
            ty:
              Path:
                path:
                  segments:
                    - Outer
                generic_args: []
        return_types:
          - I32
      body:
        statements:
          - Return:
              FieldAccess:
                object:
                  FieldAccess:
                    object:
                      Path:
                        segments:
                          - o
                    field: inner
                    is_propagating: false
                field: value
                is_propagating: false
