crates/fig-parser/tests/snapshots/integration_tests__expressions__index_suffix.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: index_ops
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params:
          - name: arr
            ty:
              Array:
                element_type: I32
                size: ~
          - name: idx
            ty: USize
        return_types:
          - Path:
              path:
                segments:
                  - ok
              generic_args: []
      body:
        statements:
          - Let:
              annotations: []
              name: first
              ty: ~
              value:
                Index:
                  object:
                    Path:
                      segments:
                        - arr
                  index:
                    IntegerLiteral:
                      base: Decimal
                      digits: "0"
                      suffix: ~
          - Let:
              annotations: []
              name: i
              ty: ~
              value:
                Index:
                  object:
                    Path:
                      segments:
                        - arr
                  index:
                    Path:
                      segments:
                        - idx
          - Let:
              annotations: []
              name: computed
              ty: ~
              value:
                Index:
                  object:
                    Path:
                      segments:
                        - arr
                  index:
                    BinaryOp:
                      lhs:
                        Path:
                          segments:
                            - idx
                      op: Add
                      rhs:
                        IntegerLiteral:
                          base: Decimal
                          digits: "1"
                          suffix: ~
          - Pass
