crates/fig-parser/tests/snapshots/integration_tests__expressions__method_call.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name:
        segments:
          - Counter
      generic_params: []
      requires: []
      fields:
        - name: count
          ty: I32
          visibility: Default
          annotations: []
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver:
          - name: Counter
            generic_args: []
        name: increment
        outer_generic_params: []
        func_generic_params: []
        self_param:
          is_pointer: true
          is_mutable: true
        params: []
        return_types:
          - Path:
              path:
                segments:
                  - ok
              generic_args: []
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver:
          - name: Counter
            generic_args: []
        name: get
        outer_generic_params: []
        func_generic_params: []
        self_param:
          is_pointer: true
          is_mutable: false
        params: []
        return_types:
          - I32
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: use_counter
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params:
          - name: c
            ty:
              Pointer:
                nullable: false
                mutable: true
                element_type:
                  Path:
                    path:
                      segments:
                        - Counter
                    generic_args: []
        return_types:
          - Path:
              path:
                segments:
                  - ok
              generic_args: []
      body:
        statements:
          - Expression:
              Call:
                callee:
                  FieldAccess:
                    object:
                      Path:
                        segments:
                          - c
                    field: increment
                    is_propagating: false
                args: []
                generic_args: ~
                is_propagating: false
          - Let:
              annotations: []
              name: v
              ty: ~
              value:
                Call:
                  callee:
                    FieldAccess:
                      object:
                        Path:
                          segments:
                            - c
                      field: get
                      is_propagating: false
                  args: []
                  generic_args: ~
                  is_propagating: false
          - Pass
